@@ -497,6 +497,7 @@ typedef struct {
 #endif
 	} stat_cache_engine;
 	unsigned short enable_cores;
+	unsigned short reject_expect_100_with_417;
 } server_config;
 
 typedef struct {
