@@ -210,6 +210,7 @@ static server *server_init(void) {
 	srv->srvconf.modules_dir = buffer_init_string(LIBRARY_DIR);
 	srv->srvconf.network_backend = buffer_init();
 	srv->srvconf.upload_tempdirs = array_init();
+	srv->srvconf.reject_expect_100_with_417 = 1;
 
 	/* use syslog */
 	srv->errorlog_fd = -1;
